k8s/apps/configs/kiali.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":
      { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-west-2:704855531002:certificate/1f0773fc-d7d2-4ffd-9b7c-d300addcc2e6"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /healthz/ready
    alb.ingress.kubernetes.io/healthcheck-port: status-port
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    external-dns.alpha.kubernetes.io/hostname: "kiali.dallin.brewsentry.com"
  name: kiali-ingress
  namespace: istio-ingress
spec:
  ingressClassName: alb
  tls:
  - hosts:
    - kiali.dallin.brewsentry.com
    secretName: kiali-tls
  rules:
  - host: kiali.dallin.brewsentry.com
    http:
      paths:
      - backend:
          service:
            name: istio-gateway
            port:
              number: 443
        path: /*
        pathType: ImplementationSpecific
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: istio-system
spec:
  hosts:
  - "kiali.dallin.brewsentry.com"
  gateways:
  - istio-ingress/common-gateway
  http:
  - route:
    - destination:
        host: kiali
        port:
          number: 20001
    match:
    - uri:
        prefix: /
