k8s/apps/configs/react-app.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: react-app-gateway
  namespace: react-app
spec:
  selector:
    istio: ingress-istio-ingress
  servers:
    - port:
        number: 443
        name: https-443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: "react-app-tls"
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: react-app-vs
  namespace: react-app
spec:
  hosts:
    - "react-app.dallin.brewsentry.com"
  gateways:
    - react-app-gateway
  http:
    - route:
        - destination:
            host: react-app
            port:
              number: 9898
      match:
        - uri:
            prefix: /
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":
      { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-west-2:704855531002:certificate/796982ad-37f1-45c7-ad3e-4f7565dbb228"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /healthz/ready
    alb.ingress.kubernetes.io/healthcheck-port: status-port
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    external-dns.alpha.kubernetes.io/hostname: "react-app.dallin.brewsentry.com"
  name: react-app-ingress
  namespace: istio-ingress
spec:
  ingressClassName: alb
  tls:
  - hosts:
    - react-app.dallin.brewsentry.com
    secretName: react-app-tls
  rules:
  - host: react-app.dallin.brewsentry.com
    http:
      paths:
      - backend:
          service:
            name: istio-ingress-istio-ingress
            port:
              number: 443
        path: /*
        pathType: ImplementationSpecific
